--- a/src/_posts/2018-07-18-post.md
+++ b/src/_posts/2018-07-18-post.md
@@ -11,14 +11,23 @@ location:
 <h2>
 Health economics in R: Scoping workshop
 </h2>
-    
+---
+
+##### Venue:
+Seminar and Learning Centre 5.06 (SALC 6),
+Sherfield Building,
+South Kensington Campus,
+Imperial College London, SW7 2BX
+
+##### Date:
+Friday 30th November 2018
     
 
 <div markdown="1">
 ![image-title-here](/assets/images/dilbert-requirements.gif){:height="200px" width="700px"}
 </div>
 
-_Give me six hours to chop down a tree and I will spend the first four sharpening the axe -_ 
+> _Give me six hours to chop down a tree and I will spend the first four sharpening the axe -_ 
 Abraham Lincoln
 
 #### Background
@@ -40,7 +49,63 @@ The workshop will identify and clarify:
 
 The workshop will kick start prototypes of functions, data and packages to be released publicly (e.g. [CRAN](https://cran.r-project.org/)), as well as training courses in using the new tools and papers.
 
-#### Location
+If you have any questions please contact me at <ngreen1@ic.ac.uk>
+
+---
+
+#### Preliminary program
+
+9:00-9:30 Arrival w/ *Coffee*
+
+9:30-9.45 Welcome [[Nathan Green, Imperial College London](https://www.imperial.ac.uk/people/nathan.green)]
+
+9:45-10.15 *Why are we here and what do we hope to achieve?*
+
+10:15-xxxx *Current tools for health economics*
+
+General overview and particular strengths and weaknesses
+
+10:30-11:00	TreeAge [tbc]
+
+11:00-11:30	Microsoft Excel [tbc]
+
+11:30-12:00 R [Nathan Green]
+
+*Lunch*
+
+1:00-xxxx *Identify health economic modelling needs & challenges*
+
+* Present an example problem and solution in R [tbc]
+* List of more examples problems to give idea of range of possible issues
+* Determine pressing problems, issues or needs (current or future)
+* In groups use these to discuss how to combine, narrow to core problems
+
+2:00-xxxx *Clarify modelling needs*
+
+In groups, answer the following questions and report back:
+
+* Why do these need to be addressed? What will happen if they aren’t?
+* How wide spread is the issue? How long has it been a problem and what the impact?
+* What evidence is there of this?
+
+
+3:00-xxxx	*Identify possible opportunities & solutions*
+
+* Rank and prioritise problems
+* With the help of an R expert, in each group think about ‘if we could…’, ‘if there was a way to…’
+
+4:00-xxxx	*Next steps/Roadmap*
+
+* Discuss and decide implementation
+* Form working groups
+* Task assignment
+* Set timelines and milestones
+* Communication channels e.g. [GitHub](https://github.com/)
+
+
+
+
+##### Location
 
 {% google_map, zoom="13" %}
 
